# micro2023

./: .gitignore  nuevo_proyecto.sh
TEMPLATE/: CMakeLists.txt
adc_vumetro/: CMakeLists.txt  adc_vumetro.c
blinking_timer/: CMakeLists.txt  blinking_timer.c
control_servo/: CMakeLists.txt  control_servo.c
control_servo_con_adc/: CMakeLists.txt  control_servo_con_adc.c
lcd_1602/: CMakeLists.txt  lcd_1602.c
lcd_1602/lcd_lib/: CMakeLists.txt  lcd_lib.c  lcd_lib.h
mic_muestreo/: CMakeLists.txt  mic_muestreo.c
mic_vumetro/: CMakeLists.txt  mic_vumetro.c
semaforo/: CMakeLists.txt  semaforo.c
semaforo_peatonal/: CMakeLists.txt  semaforo_peatonal.c
semaforo_timer/: CMakeLists.txt  semaforo_timer.c
