cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(blinking_timer_project C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_executable(blinking_timer
blinking_timer.c
)
# pico_enable_stdio_usb(semaforo_timer 1)
# pico_enable_stdio_uart(semaforo_timer 1)
pico_add_extra_outputs(blinking_timer)
target_link_libraries(blinking_timer pico_stdlib hardware_gpio hardware_timer)